--- a/public/index.html
+++ b/public/index.html
@@ -12,7 +12,7 @@
   <meta name="description" content="Web site created using create-react-app" />
   <link rel="apple-touch-icon" href="%PUBLIC_URL%/emoji-smile-fill.svg" />
   <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-  <title>Message Board</title>
+  <title>Blog</title>
 </head>
 
 <body>
